logs/cave-miner.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cave_miner'...
Listing './lib/python3.5/site-packages/cave_miner/formats'...
Compiling './lib/python3.5/site-packages/cave_miner/inject.py'...
***   File "./lib/python3.5/site-packages/cave_miner/inject.py", line 4
    print "{}[*]{} Starting injection into binary...{}".format(Bcolors.YELLOW, Bcolors.BOLD, Bcolors.ENDC)
                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cave_miner/main.py'...
***   File "./lib/python3.5/site-packages/cave_miner/main.py", line 25
    print """
    {gy}/========\{e}
   {gy}/{e}    {gn}||{e}    {gy}\{e}
        {gn}||{e}
        {gn}||{e}
        {gn}||{e}
   CAVE {gn}||{e} MINER
  """.format(gy=Bcolors.GREY, gn=Bcolors.GREEN, e=Bcolors.ENDC)
             
                     
                                    
                 
                 
                 
                       
    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cave_miner/search.py'...
***   File "./lib/python3.5/site-packages/cave_miner/search.py", line 15
    print "{}[*]{} New cave detected !{}".format(Bcolors.YELLOW, Bcolors.BOLD, Bcolors.ENDC)
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cave_miner/tests.py'...
***   File "./lib/python3.5/site-packages/cave_miner/tests.py", line 7
    if not res: print "{r}*** File {filename} doesnt exist ***{e}".format(filename=filename, r=Bcolors.RED, e=Bcolors.ENDC)
                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cave_miner-1.7.egg-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/kaitaistruct-0.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
